trunk/Archive2/6a/de014eb99f9035/output
main.cpp:13:5: error: no viable conversion from 'typename enable_if<!is_array<double>::value, shared_ptr<double> >::type' (aka 'std::__1::shared_ptr<double>') to 'double *'
    d_x(std::make_shared<double>(x)),
    ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:14:5: error: no viable conversion from 'typename enable_if<!is_array<double>::value, shared_ptr<double> >::type' (aka 'std::__1::shared_ptr<double>') to 'double *'
    d_y(std::make_shared<double>(y))
    ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
